name:                liquidhaskell-tutorial 
version:             0.1.0.0
synopsis:            Source for "Programming with Refinement Types" 
-- description:
homepage:            https://github.com/ucsd-progsys/liquidhaskell-tutorial
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
copyright:           Ranjit Jhala
category:            Web
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

executable homepage 
  main-is:             Main.hs
  hs-source-dirs:      . 
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base,
                       hakyll,
                       containers,
                       parsec,
                       mtl,
                       vector,
                       text
